src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B904_B904.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind: RaiseWithoutFromInsideExcept
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 23
  fix: ~
  parent: ~
- kind: RaiseWithoutFromInsideExcept
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 21
  fix: ~
  parent: ~
- kind: RaiseWithoutFromInsideExcept
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 39
  fix: ~
  parent: ~

