src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__extend_immutable_calls.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind: FunctionCallArgumentDefault
  location:
    row: 16
    column: 66
  end_location:
    row: 16
    column: 77
  fix: ~

